begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.container.keyvalue
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|keyvalue
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|conf
operator|.
name|StorageUnit
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|client
operator|.
name|BlockID
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|conf
operator|.
name|OzoneConfiguration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|datanode
operator|.
name|proto
operator|.
name|ContainerProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|scm
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|StorageContainerException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|BlockData
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|ChunkInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|volume
operator|.
name|HddsVolume
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|volume
operator|.
name|RoundRobinVolumeChoosingPolicy
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|volume
operator|.
name|VolumeSet
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|keyvalue
operator|.
name|impl
operator|.
name|BlockManagerImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|test
operator|.
name|GenericTestUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Before
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Rule
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|rules
operator|.
name|TemporaryFolder
import|;
end_import

begin_import
import|import
name|org
operator|.
name|mockito
operator|.
name|Mockito
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|UUID
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertEquals
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertNotNull
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|assertTrue
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|fail
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|mockito
operator|.
name|ArgumentMatchers
operator|.
name|anyList
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|mockito
operator|.
name|ArgumentMatchers
operator|.
name|anyLong
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|mockito
operator|.
name|Mockito
operator|.
name|mock
import|;
end_import

begin_comment
comment|/**  * This class is used to test key related operations on the container.  */
end_comment

begin_class
DECL|class|TestBlockManagerImpl
specifier|public
class|class
name|TestBlockManagerImpl
block|{
annotation|@
name|Rule
DECL|field|folder
specifier|public
name|TemporaryFolder
name|folder
init|=
operator|new
name|TemporaryFolder
argument_list|()
decl_stmt|;
DECL|field|config
specifier|private
name|OzoneConfiguration
name|config
decl_stmt|;
DECL|field|scmId
specifier|private
name|String
name|scmId
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
DECL|field|volumeSet
specifier|private
name|VolumeSet
name|volumeSet
decl_stmt|;
DECL|field|volumeChoosingPolicy
specifier|private
name|RoundRobinVolumeChoosingPolicy
name|volumeChoosingPolicy
decl_stmt|;
DECL|field|keyValueContainerData
specifier|private
name|KeyValueContainerData
name|keyValueContainerData
decl_stmt|;
DECL|field|keyValueContainer
specifier|private
name|KeyValueContainer
name|keyValueContainer
decl_stmt|;
DECL|field|blockData
specifier|private
name|BlockData
name|blockData
decl_stmt|;
DECL|field|blockManager
specifier|private
name|BlockManagerImpl
name|blockManager
decl_stmt|;
DECL|field|blockID
specifier|private
name|BlockID
name|blockID
decl_stmt|;
annotation|@
name|Before
DECL|method|setUp ()
specifier|public
name|void
name|setUp
parameter_list|()
throws|throws
name|Exception
block|{
name|config
operator|=
operator|new
name|OzoneConfiguration
argument_list|()
expr_stmt|;
name|UUID
name|datanodeId
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
decl_stmt|;
name|HddsVolume
name|hddsVolume
init|=
operator|new
name|HddsVolume
operator|.
name|Builder
argument_list|(
name|folder
operator|.
name|getRoot
argument_list|()
operator|.
name|getAbsolutePath
argument_list|()
argument_list|)
operator|.
name|conf
argument_list|(
name|config
argument_list|)
operator|.
name|datanodeUuid
argument_list|(
name|datanodeId
operator|.
name|toString
argument_list|()
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|volumeSet
operator|=
name|mock
argument_list|(
name|VolumeSet
operator|.
name|class
argument_list|)
expr_stmt|;
name|volumeChoosingPolicy
operator|=
name|mock
argument_list|(
name|RoundRobinVolumeChoosingPolicy
operator|.
name|class
argument_list|)
expr_stmt|;
name|Mockito
operator|.
name|when
argument_list|(
name|volumeChoosingPolicy
operator|.
name|chooseVolume
argument_list|(
name|anyList
argument_list|()
argument_list|,
name|anyLong
argument_list|()
argument_list|)
argument_list|)
operator|.
name|thenReturn
argument_list|(
name|hddsVolume
argument_list|)
expr_stmt|;
name|keyValueContainerData
operator|=
operator|new
name|KeyValueContainerData
argument_list|(
literal|1L
argument_list|,
operator|(
name|long
operator|)
name|StorageUnit
operator|.
name|GB
operator|.
name|toBytes
argument_list|(
literal|5
argument_list|)
argument_list|,
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
argument_list|,
name|datanodeId
operator|.
name|toString
argument_list|()
argument_list|)
expr_stmt|;
name|keyValueContainer
operator|=
operator|new
name|KeyValueContainer
argument_list|(
name|keyValueContainerData
argument_list|,
name|config
argument_list|)
expr_stmt|;
name|keyValueContainer
operator|.
name|create
argument_list|(
name|volumeSet
argument_list|,
name|volumeChoosingPolicy
argument_list|,
name|scmId
argument_list|)
expr_stmt|;
comment|// Creating BlockData
name|blockID
operator|=
operator|new
name|BlockID
argument_list|(
literal|1L
argument_list|,
literal|1L
argument_list|)
expr_stmt|;
name|blockData
operator|=
operator|new
name|BlockData
argument_list|(
name|blockID
argument_list|)
expr_stmt|;
name|blockData
operator|.
name|addMetadata
argument_list|(
literal|"VOLUME"
argument_list|,
literal|"ozone"
argument_list|)
expr_stmt|;
name|blockData
operator|.
name|addMetadata
argument_list|(
literal|"OWNER"
argument_list|,
literal|"hdfs"
argument_list|)
expr_stmt|;
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|chunkList
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
decl_stmt|;
name|ChunkInfo
name|info
init|=
operator|new
name|ChunkInfo
argument_list|(
name|String
operator|.
name|format
argument_list|(
literal|"%d.data.%d"
argument_list|,
name|blockID
operator|.
name|getLocalID
argument_list|()
argument_list|,
literal|0
argument_list|)
argument_list|,
literal|0
argument_list|,
literal|1024
argument_list|)
decl_stmt|;
name|chunkList
operator|.
name|add
argument_list|(
name|info
operator|.
name|getProtoBufMessage
argument_list|()
argument_list|)
expr_stmt|;
name|blockData
operator|.
name|setChunks
argument_list|(
name|chunkList
argument_list|)
expr_stmt|;
comment|// Create KeyValueContainerManager
name|blockManager
operator|=
operator|new
name|BlockManagerImpl
argument_list|(
name|config
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testPutAndGetBlock ()
specifier|public
name|void
name|testPutAndGetBlock
parameter_list|()
throws|throws
name|Exception
block|{
name|assertEquals
argument_list|(
literal|0
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
comment|//Put Block
name|blockManager
operator|.
name|putBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockData
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
literal|1
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
comment|//Get Block
name|BlockData
name|fromGetBlockData
init|=
name|blockManager
operator|.
name|getBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockData
operator|.
name|getBlockID
argument_list|()
argument_list|)
decl_stmt|;
name|assertEquals
argument_list|(
name|blockData
operator|.
name|getContainerID
argument_list|()
argument_list|,
name|fromGetBlockData
operator|.
name|getContainerID
argument_list|()
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|blockData
operator|.
name|getLocalID
argument_list|()
argument_list|,
name|fromGetBlockData
operator|.
name|getLocalID
argument_list|()
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|blockData
operator|.
name|getChunks
argument_list|()
operator|.
name|size
argument_list|()
argument_list|,
name|fromGetBlockData
operator|.
name|getChunks
argument_list|()
operator|.
name|size
argument_list|()
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|blockData
operator|.
name|getMetadata
argument_list|()
operator|.
name|size
argument_list|()
argument_list|,
name|fromGetBlockData
operator|.
name|getMetadata
argument_list|()
operator|.
name|size
argument_list|()
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testDeleteBlock ()
specifier|public
name|void
name|testDeleteBlock
parameter_list|()
throws|throws
name|Exception
block|{
name|assertEquals
argument_list|(
literal|0
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
comment|//Put Block
name|blockManager
operator|.
name|putBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockData
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
literal|1
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
comment|//Delete Block
name|blockManager
operator|.
name|deleteBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockID
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
literal|0
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
try|try
block|{
name|blockManager
operator|.
name|getBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockID
argument_list|)
expr_stmt|;
name|fail
argument_list|(
literal|"testDeleteBlock"
argument_list|)
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|StorageContainerException
name|ex
parameter_list|)
block|{
name|GenericTestUtils
operator|.
name|assertExceptionContains
argument_list|(
literal|"Unable to find the block"
argument_list|,
name|ex
argument_list|)
expr_stmt|;
block|}
block|}
annotation|@
name|Test
DECL|method|testListBlock ()
specifier|public
name|void
name|testListBlock
parameter_list|()
throws|throws
name|Exception
block|{
name|blockManager
operator|.
name|putBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockData
argument_list|)
expr_stmt|;
name|List
argument_list|<
name|BlockData
argument_list|>
name|listBlockData
init|=
name|blockManager
operator|.
name|listBlock
argument_list|(
name|keyValueContainer
argument_list|,
literal|1
argument_list|,
literal|10
argument_list|)
decl_stmt|;
name|assertNotNull
argument_list|(
name|listBlockData
argument_list|)
expr_stmt|;
name|assertTrue
argument_list|(
name|listBlockData
operator|.
name|size
argument_list|()
operator|==
literal|1
argument_list|)
expr_stmt|;
for|for
control|(
name|long
name|i
init|=
literal|2
init|;
name|i
operator|<=
literal|10
condition|;
name|i
operator|++
control|)
block|{
name|blockID
operator|=
operator|new
name|BlockID
argument_list|(
literal|1L
argument_list|,
name|i
argument_list|)
expr_stmt|;
name|blockData
operator|=
operator|new
name|BlockData
argument_list|(
name|blockID
argument_list|)
expr_stmt|;
name|blockData
operator|.
name|addMetadata
argument_list|(
literal|"VOLUME"
argument_list|,
literal|"ozone"
argument_list|)
expr_stmt|;
name|blockData
operator|.
name|addMetadata
argument_list|(
literal|"OWNER"
argument_list|,
literal|"hdfs"
argument_list|)
expr_stmt|;
name|List
argument_list|<
name|ContainerProtos
operator|.
name|ChunkInfo
argument_list|>
name|chunkList
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
decl_stmt|;
name|ChunkInfo
name|info
init|=
operator|new
name|ChunkInfo
argument_list|(
name|String
operator|.
name|format
argument_list|(
literal|"%d.data.%d"
argument_list|,
name|blockID
operator|.
name|getLocalID
argument_list|()
argument_list|,
literal|0
argument_list|)
argument_list|,
literal|0
argument_list|,
literal|1024
argument_list|)
decl_stmt|;
name|chunkList
operator|.
name|add
argument_list|(
name|info
operator|.
name|getProtoBufMessage
argument_list|()
argument_list|)
expr_stmt|;
name|blockData
operator|.
name|setChunks
argument_list|(
name|chunkList
argument_list|)
expr_stmt|;
name|blockManager
operator|.
name|putBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockData
argument_list|)
expr_stmt|;
block|}
name|listBlockData
operator|=
name|blockManager
operator|.
name|listBlock
argument_list|(
name|keyValueContainer
argument_list|,
literal|1
argument_list|,
literal|10
argument_list|)
expr_stmt|;
name|assertNotNull
argument_list|(
name|listBlockData
argument_list|)
expr_stmt|;
name|assertTrue
argument_list|(
name|listBlockData
operator|.
name|size
argument_list|()
operator|==
literal|10
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testGetNoSuchBlock ()
specifier|public
name|void
name|testGetNoSuchBlock
parameter_list|()
throws|throws
name|Exception
block|{
name|assertEquals
argument_list|(
literal|0
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
comment|//Put Block
name|blockManager
operator|.
name|putBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockData
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
literal|1
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
comment|//Delete Block
name|blockManager
operator|.
name|deleteBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockID
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
literal|0
argument_list|,
name|keyValueContainer
operator|.
name|getContainerData
argument_list|()
operator|.
name|getKeyCount
argument_list|()
argument_list|)
expr_stmt|;
try|try
block|{
comment|//Since the block has been deleted, we should not be able to find it
name|blockManager
operator|.
name|getBlock
argument_list|(
name|keyValueContainer
argument_list|,
name|blockID
argument_list|)
expr_stmt|;
name|fail
argument_list|(
literal|"testGetNoSuchBlock failed"
argument_list|)
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|StorageContainerException
name|ex
parameter_list|)
block|{
name|GenericTestUtils
operator|.
name|assertExceptionContains
argument_list|(
literal|"Unable to find the block"
argument_list|,
name|ex
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|ContainerProtos
operator|.
name|Result
operator|.
name|NO_SUCH_BLOCK
argument_list|,
name|ex
operator|.
name|getResult
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
block|}
end_class

end_unit

